# lbfgs-FFNN

./: CMakeLists.txt
lib/autodiff/autodiff/common/: eigen.hpp
lib/autodiff/autodiff/reverse/var/: var.hpp
src/: bfgs.hpp  layer.hpp  lbfgs.hpp  main.cpp  minimizer_base.hpp
